# screenwatch

./: .gitignore
backend/: Cargo.toml
backend/screenwatch-api/: Cargo.toml
backend/screenwatch-api/src/: main.rs
backend/screenwatch-daemon/: Cargo.toml
frontend/src/: App.tsx
